--- a/vignettes/README.Rmd
+++ b/vignettes/README.Rmd
@@ -1,55 +1,38 @@
 ---
-title: "Mzion App"
-author:
-- name: Qiang Zhang
-date: "`r Sys.Date()`"
-always_allow_html: true
-output:
-  github_document:
-    toc: yes
-  md_document:
-    toc: yes
-    toc_depth: 4
-    variant: gfm
-  word_document:
-    toc: yes
-  html_document:
-    fig_caption: yes
-    highlight: haddock
-    keep_md: yes
-    theme: united
-    toc: yes
-    toc_depth: 4
-    toc_float: yes
-  pdf_document:
-    toc: yes
-    number_sections: true
-  html_vignette: 
-  vignette: >
-    %\VignetteIndexEntry{mzionShiny}
-    %\VignetteEncoding{UTF-8}`
-    %\VignetteEngine{knitr::rmarkdown}
+output: github_document
 ---
 
-```{r setup, include = FALSE}
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  out.width='.40\\linewidth',
-  fig.width=3,
-  fig.height=3,
-  fig.show='hold',
-  fig.align='center',
-  comment = "#>"
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
 )
 ```
 
+# mzionShiny
+
+<!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+<!-- badges: end -->
+
+The package is the Shiny app of [mzion](https://github.com/qzhang503/mzion/).
+
 ## Installation
 
-To install this package, start R and enter:
-
-```{r installation, include = TRUE, eval = FALSE}
+``` r
 if (!requireNamespace("devtools", quietly = TRUE))
     install.packages("devtools")
 devtools::install_github("qzhang503/mzionShiny")
+```
+
+## Example
+
+```{r example, eval=FALSE}
+library(mzionShiny)
+run_app()
 ```
 
